kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:  #   - это поды с меткой
      app: web    #     app и ее значением web
  template:       # Теперь зададим шаблон конфигурации пода
    metadata:
      name: web
      labels:
        webserver: nginx
        app: web
    spec:
      containers:
      - name: web
        image: zdeniz/otus-webapp:1.0
        volumeMounts:
          - name: app
            mountPath: /app
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        livenessProbe:
          tcpSocket: { port: 8000 }
      volumes:
      - name: app
        emptyDir: {}
